packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/RiskFactors__c.field-meta.xml
<CustomField>
    <fullName>RiskFactors__c</fullName>
    <description>JSON representation of risk factors from risk assessment.</description>
    <inlineHelpText>JSON representation of risk factors from risk assessment.</inlineHelpText>
    <label>Risk Factors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>