packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/RiskLevel__c.field-meta.xml
<CustomField>
    <fullName>RiskLevel__c</fullName>
    <description>Risk level category based on risk score.</description>
    <inlineHelpText>Risk level category based on risk score.</inlineHelpText>
    <label>Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOW</fullName>
                <label>Low</label>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>HIGH</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>CRITICAL</fullName>
                <label>Critical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>