packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/RiskScore__c.field-meta.xml
<CustomField>
    <fullName>RiskScore__c</fullName>
    <description>Calculated risk score for the transaction (0-100).</description>
    <inlineHelpText>Calculated risk score for the transaction (0-100).</inlineHelpText>
    <label>Risk Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>