packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/SessionType__c.field-meta.xml
<CustomField>
    <fullName>SessionType__c</fullName>
    <description>Type of session (e.g., UI, API, ChatterNetworks).</description>
    <inlineHelpText>Type of session (e.g., UI, API, ChatterNetworks).</inlineHelpText>
    <label>Session Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>