packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>Transaction start timestamp.</description>
    <inlineHelpText>Transaction start timestamp.</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>