packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/Statistics__c.field-meta.xml
<CustomField>
    <fullName>Statistics__c</fullName>
    <description>JSON representation of transaction statistics.</description>
    <inlineHelpText>JSON representation of transaction statistics.</inlineHelpText>
    <label>Statistics</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>