packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/StrictestAction__c.field-meta.xml
<CustomField>
    <fullName>StrictestAction__c</fullName>
    <description>The strictest policy action from all evaluations. Maps to UoWEnums.PolicyAction enum.</description>
    <inlineHelpText>The strictest policy action from all evaluations. Maps to UoWEnums.PolicyAction enum.</inlineHelpText>
    <label>Strictest Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALLOW</fullName>
                <label>Allow</label>
            </value>
            <value>
                <fullName>ALLOW_WITH_JUSTIFICATION</fullName>
                <label>Allow with Justification</label>
            </value>
            <value>
                <fullName>REQUIRE_TRACING</fullName>
                <label>Require Tracing</label>
            </value>
            <value>
                <fullName>REQUIRE_MASKING</fullName>
                <label>Require Masking</label>
            </value>
            <value>
                <fullName>REQUIRE_APPROVAL</fullName>
                <label>Require Approval</label>
            </value>
            <value>
                <fullName>DENY</fullName>
                <label>Deny</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>