packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <description>JSON structure containing execution timeline with phases and spans for visualization. OpenTelemetry-compatible format.</description>
    <inlineHelpText>JSON structure containing execution timeline with phases and spans for visualization. OpenTelemetry-compatible format.</inlineHelpText>
    <label>Timeline</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>