packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/TotalCalloutsExecuted__c.field-meta.xml
<CustomField>
    <fullName>TotalCalloutsExecuted__c</fullName>
    <description>Total callouts successfully executed across all CALLOUT work items.</description>
    <inlineHelpText>Total callouts successfully executed across all CALLOUT work items.</inlineHelpText>
    <label>Total Callouts Executed</label>
    <summarizedField>UoWAuditWorkItem__c.SuccessCount__c</summarizedField>
    <summaryFilterItems>
        <field>UoWAuditWorkItem__c.WorkType__c</field>
        <operation>equals</operation>
        <value>CALLOUT</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>UoWAuditWorkItem__c.WorkItemStatus__c</field>
        <operation>notEqual</operation>
        <value>SKIPPED</value>
    </summaryFilterItems>
    <summaryForeignKey>UoWAuditWorkItem__c.AuditTransaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>