packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/TotalEmailsSent__c.field-meta.xml
<CustomField>
    <fullName>TotalEmailsSent__c</fullName>
    <description>Total emails successfully sent across all EMAIL work items.</description>
    <inlineHelpText>Total emails successfully sent across all EMAIL work items.</inlineHelpText>
    <label>Total Emails Sent</label>
    <summarizedField>UoWAuditWorkItem__c.SuccessCount__c</summarizedField>
    <summaryFilterItems>
        <field>UoWAuditWorkItem__c.WorkType__c</field>
        <operation>equals</operation>
        <value>EMAIL</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>UoWAuditWorkItem__c.WorkItemStatus__c</field>
        <operation>notEqual</operation>
        <value>SKIPPED</value>
    </summaryFilterItems>
    <summaryForeignKey>UoWAuditWorkItem__c.AuditTransaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>