packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/TotalEventsPlanned__c.field-meta.xml
<CustomField>
    <fullName>TotalEventsPlanned__c</fullName>
    <description>Total platform events planned across all EVENT work items.</description>
    <inlineHelpText>Total platform events planned across all EVENT work items.</inlineHelpText>
    <label>Total Events Planned</label>
    <summarizedField>UoWAuditWorkItem__c.PlannedCount__c</summarizedField>
    <summaryFilterItems>
        <field>UoWAuditWorkItem__c.WorkType__c</field>
        <operation>equals</operation>
        <value>EVENT</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>UoWAuditWorkItem__c.WorkItemStatus__c</field>
        <operation>notEqual</operation>
        <value>SKIPPED</value>
    </summaryFilterItems>
    <summaryForeignKey>UoWAuditWorkItem__c.AuditTransaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>