packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/TotalFlowsProcessed__c.field-meta.xml
<CustomField>
    <fullName>TotalFlowsProcessed__c</fullName>
    <description>Total flows processed across all FLOW work items.</description>
    <inlineHelpText>Total flows processed across all FLOW work items.</inlineHelpText>
    <label>Total Flows Processed</label>
    <summarizedField>UoWAuditWorkItem__c.ProcessedCount__c</summarizedField>
    <summaryFilterItems>
        <field>UoWAuditWorkItem__c.WorkType__c</field>
        <operation>equals</operation>
        <value>FLOW</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>UoWAuditWorkItem__c.WorkItemStatus__c</field>
        <operation>notEqual</operation>
        <value>SKIPPED</value>
    </summaryFilterItems>
    <summaryForeignKey>UoWAuditWorkItem__c.AuditTransaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>