packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/TotalNotificationsSent__c.field-meta.xml
<CustomField>
    <fullName>TotalNotificationsSent__c</fullName>
    <description>Total notifications successfully sent across all NOTIFICATION work items.</description>
    <inlineHelpText>Total notifications successfully sent across all NOTIFICATION work items.</inlineHelpText>
    <label>Total Notifications Sent</label>
    <summarizedField>UoWAuditWorkItem__c.SuccessCount__c</summarizedField>
    <summaryFilterItems>
        <field>UoWAuditWorkItem__c.WorkType__c</field>
        <operation>equals</operation>
        <value>NOTIFICATION</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>UoWAuditWorkItem__c.WorkItemStatus__c</field>
        <operation>notEqual</operation>
        <value>SKIPPED</value>
    </summaryFilterItems>
    <summaryForeignKey>UoWAuditWorkItem__c.AuditTransaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>