packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/TotalWorkItems__c.field-meta.xml
<CustomField>
    <fullName>TotalWorkItems__c</fullName>
    <description>Total Work Items included in this transaction</description>
    <inlineHelpText>Total Work Items included in this transaction</inlineHelpText>
    <label>Total Work Items</label>
    <summaryForeignKey>UoWAuditWorkItem__c.AuditTransaction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>