packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/TracingEnabled__c.field-meta.xml
<CustomField>
    <fullName>TracingEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if distributed tracing was enabled for this transaction.</description>
    <inlineHelpText>Indicates if distributed tracing was enabled for this transaction.</inlineHelpText>
    <label>Tracing Enabled</label>
    <type>Checkbox</type>
</CustomField>