packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <description>Unique transaction identifier (TXN-timestamp-random). External ID for relating work items to transactions.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique transaction identifier (TXN-timestamp-random). External ID for relating work items to transactions.</inlineHelpText>
    <label>Transaction ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>