packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/TransactionScenario__c.field-meta.xml
<CustomField>
    <fullName>TransactionScenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Scenario under which this transaction was executed</description>
    <inlineHelpText>Business Scenario under which this transaction was executed</inlineHelpText>
    <label>Transaction Scenario</label>
    <referenceTo>UoWScenario__c</referenceTo>
    <relationshipName>AuditTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>