packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/TransactionScenarioDisplay__c.field-meta.xml
<CustomField>
    <fullName>TransactionScenarioDisplay__c</fullName>
    <formula>IF(
    ISBLANK(TransactionScenario__c),
    TransactionScenarioName__c,
    HYPERLINK(
        &apos;/&apos; + TransactionScenario__c,
        TransactionScenario__r.Name,
        &apos;_top&apos;
    )
)</formula>
    <label>Scenario</label>
    <type>Text</type>
</CustomField>