packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/TransactionScenarioName__c.field-meta.xml
<CustomField>
    <fullName>TransactionScenarioName__c</fullName>
    <description>A business transaction scenario - used always - is displayed when the UoW Scenario record is not available or not stored</description>
    <inlineHelpText>A business transaction scenario - used always - is displayed when the UoW Scenario record is not available or not stored</inlineHelpText>
    <label>Transaction Scenario Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>