packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/TransactionStatus__c.field-meta.xml
<CustomField>
    <fullName>TransactionStatus__c</fullName>
    <description>Final status of the transaction. Maps to UoWEnums.TransactionStatus enum.</description>
    <inlineHelpText>Final status of the transaction. Maps to UoWEnums.TransactionStatus enum.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN_PROGRESS</fullName>
                <color>#0176D3</color>
                <label>🔄 In Progress</label>
            </value>
            <value>
                <fullName>ENQUEUED</fullName>
                <color>#1B96FF</color>
                <label>🕐 Enqueued</label>
            </value>
            <value>
                <fullName>PENDING_APPROVAL</fullName>
                <color>#FE9339</color>
                <label>⏸️ Pending Approval</label>
            </value>
            <value>
                <fullName>APPROVED</fullName>
                <color>#06A59A</color>
                <label>👍 Approved</label>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
                <color>#2E844A</color>
                <label>✅ Success</label>
            </value>
            <value>
                <fullName>PARTIAL_SUCCESS</fullName>
                <color>#DD7A01</color>
                <label>⚠️ Partial Success</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
                <color>#C23934</color>
                <label>❌ Failed</label>
            </value>
            <value>
                <fullName>ROLLED_BACK</fullName>
                <color>#8E030F</color>
                <label>⛔ Rolled Back</label>
            </value>
            <value>
                <fullName>ROLLED_BACK_BY_PARENT</fullName>
                <color>#8E030F</color>
                <label>⛔ Rolled Back by Parent</label>
            </value>
            <value>
                <fullName>REJECTED</fullName>
                <color>#EA001E</color>
                <label>🚫 Rejected</label>
            </value>
            <value>
                <fullName>DENIED_BY_POLICY</fullName>
                <color>#AA0A24</color>
                <label>🛡️ Denied by Policy</label>
            </value>
            <value>
                <fullName>SKIPPED</fullName>
                <color>#747474</color>
                <label>⏭️ Skipped</label>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
                <color>#2E844A</color>
                <label>✔️ Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>