packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <description>Type of audit transaction record. AUDIT for standard transactions created from event processing, TOMBSTONE for placeholder records created when audit events failed async delivery.</description>
    <inlineHelpText>Type of audit transaction record. AUDIT for standard audit records, TOMBSTONE for failure placeholder records.</inlineHelpText>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUDIT</fullName>
                <color>#0176D3</color>
                <default>true</default>
                <label>📋 Audit</label>
            </value>
            <value>
                <fullName>TOMBSTONE</fullName>
                <color>#BA0517</color>
                <label>🪦 Tombstone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>