packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UoWAuditTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>