packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/UserIsImpersonated__c.field-meta.xml
<CustomField>
    <fullName>UserIsImpersonated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether an admin is logged in as this user (impersonation).</description>
    <inlineHelpText>Whether an admin is logged in as this user (impersonation).</inlineHelpText>
    <label>User Is Impersonated</label>
    <type>Checkbox</type>
</CustomField>