packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/UserLicenseName__c.field-meta.xml
<CustomField>
    <fullName>UserLicenseName__c</fullName>
    <description>Name of the user&apos;s license type (e.g., Salesforce, Salesforce Platform).</description>
    <inlineHelpText>Name of the user&apos;s license type (e.g., Salesforce, Salesforce Platform).</inlineHelpText>
    <label>User License Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>