packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/UserLocale__c.field-meta.xml
<CustomField>
    <fullName>UserLocale__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>User&apos;s locale setting (e.g., en_US, de_DE).</description>
    <inlineHelpText>User&apos;s locale setting (e.g., en_US, de_DE).</inlineHelpText>
    <label>User Locale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>