packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <description>Username of the user who initiated the transaction (for reporting).</description>
    <inlineHelpText>Username of the user who initiated the transaction (for reporting).</inlineHelpText>
    <label>Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>