packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/UserProfileId__c.field-meta.xml
<CustomField>
    <fullName>UserProfileId__c</fullName>
    <description>Profile ID of the executing user.</description>
    <inlineHelpText>Profile ID of the executing user.</inlineHelpText>
    <label>User Profile ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>