packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/UserProfileName__c.field-meta.xml
<CustomField>
    <fullName>UserProfileName__c</fullName>
    <description>Name of the user&apos;s profile (e.g., System Administrator).</description>
    <inlineHelpText>Name of the user&apos;s profile (e.g., System Administrator).</inlineHelpText>
    <label>User Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>