packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/UserRoleId__c.field-meta.xml
<CustomField>
    <fullName>UserRoleId__c</fullName>
    <description>ID of the user&apos;s role.</description>
    <inlineHelpText>ID of the user&apos;s role.</inlineHelpText>
    <label>User Role ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>