packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/UserRoleName__c.field-meta.xml
<CustomField>
    <fullName>UserRoleName__c</fullName>
    <description>Name of the user&apos;s role.</description>
    <inlineHelpText>Name of the user&apos;s role.</inlineHelpText>
    <label>User Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>