packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/UserTimeZone__c.field-meta.xml
<CustomField>
    <fullName>UserTimeZone__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>User&apos;s timezone setting (e.g., America/Los_Angeles).</description>
    <inlineHelpText>User&apos;s timezone setting (e.g., America/Los_Angeles).</inlineHelpText>
    <label>User Time Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>