packages/uow-audit/main/default/objects/UoWAuditTransaction__c/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <description>Type of user executing the transaction (Standard, Guest, etc.).</description>
    <inlineHelpText>Type of user executing the transaction (Standard, Guest, etc.).</inlineHelpText>
    <label>User Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>